--- a/views/students.html.twig
+++ b/views/students.html.twig
@@ -24,6 +24,17 @@
                         <label>Enrollment Date:</label>
                         <input type='date' name='enrollment' class='form-control'>
                     </div>
+                    {% if allCourses %}
+                        <div class='form-group'>
+                            <label>Add a Course:</label>
+                            <select name='course_id'>
+                                <option selected value='none'></option>
+                                {% for course in allCourses %}
+                                    <option value='{{course.getId}}'>{{ course.getCourseNumber }} - {{ course.getName }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    {% endif %}
                     <button type='submit' class='btn btn-info'>Enroll</button>
                 </form>
                 <a class='btn btn-warning' href='/'>Home</a>
@@ -32,10 +43,34 @@
                 <div class="well">
                     <p>Name: {{student.getName}}</p>
                     <p>Enrollment: {{student.getEnrollment}}</p>
-                    <form action="/students/delete/{{student.getId}}" method="post">
-                        <input type="hidden" name="_method" value="delete">
-                        <button class="btn btn-danger" type="submit">Delete</button>
-                    </form>
+                    <h4>All Courses:</h4>
+                    {% if studentCourses %}
+                        <ul>
+                        {% for course in studentCourses %}
+                            <li>{{ course.getCourseNumber }} - {{ course.getName }}
+                                <form class='inline' action="/students/remove/{{student.getId}}" method="post">
+                                    <input type="hidden" name="_method" value="delete">
+                                    <input type="hidden" name="course_id" value="{{course.getId}}">
+                                    <button type='submit' class='btn-xs btn-danger'><span class='glyphicon glyphicon-trash'></span></button>
+                                </form>
+                            </li>
+                        {% endfor %}
+                        </ul>
+                    {% endif %}
+                    <hr>
+                    {% if allCourses %}
+                        <h2>Add a Course</h2>
+                        <form action="/students/add/{{student.getId}}" method="post">
+                            <label>Courses:</label>
+                            <select name='course_id'>
+                                <option disabled selected value></option>
+                                {% for course in allCourses %}
+                                    <option value='{{course.getId}}'>{{ course.getCourseNumber }} - {{ course.getName }}</option>
+                                {% endfor %}
+                            </select>
+                            <button type='submit' class='btn btn-info'>Add</button>
+                        </form>
+                    {% endif %}
                     <h2>Edit</h2>
                     <form class="" action="/students/edit/{{student.getId}}" method="post">
                         <input type="hidden" name="_method" value="patch">
@@ -44,6 +79,10 @@
                         <label for="">Edit Enrollment Date:</label>
                         <input type="date" name="enrollment" value="{{student.getEnrollment}}">
                         <button class="btn btn-info" type="submit" name="button">Update</button>
+                    </form>
+                    <form action="/students/delete/{{student.getId}}" method="post">
+                        <input type="hidden" name="_method" value="delete">
+                        <button class="btn btn-danger" type="submit">Delete</button>
                     </form>
                 </div>
             {% endif%}
