--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,6 +6,9 @@
   </head>
   <body>
     <div class="container">
+        <div class="row logoRow">
+            <a href="/"><img id="logo" src="/img/logo.png" alt="" /></a>
+        </div>
         <h1>University Registrar</h1>
         <a href='/students'><h3>View all students</h3></a>
         <a href='/courses'><h3>View all courses</h3></a>
